tried stuff idk if you can but pls help Chaos